# libgdav

./: Makefile.am  README  autogen.sh  configure.ac  enumtypes.c.template  enumtypes.h.template
docs/: Makefile.am  libgdav-docs.sgml  libgdav-sections.txt  libgdav.types
libgdav/: Makefile.am  gdav-active-lock.c  gdav-active-lock.h  gdav-alternate-uri-set-property.c  gdav-alternate-uri-set-property.h  gdav-calendar-description-property.c  gdav-calendar-description-property.h  gdav-calendar-timezone-property.c  gdav-calendar-timezone-property.h  gdav-creationdate-property.c  gdav-creationdate-property.h  gdav-date-property.c  gdav-date-property.h  gdav-displayname-property.c  gdav-displayname-property.h  gdav-enums.h  gdav-error.c  gdav-error.h  gdav-getcontentlanguage-property.c  gdav-getcontentlanguage-property.h  gdav-getcontentlength-property.c  gdav-getcontentlength-property.h  gdav-getcontenttype-property.c  gdav-getcontenttype-property.h  gdav-getetag-property.c  gdav-getetag-property.h  gdav-getlastmodified-property.c  gdav-getlastmodified-property.h  gdav-group-member-set-property.c  gdav-group-member-set-property.h  gdav-group-membership-property.c  gdav-group-membership-property.h  gdav-href-property.c  gdav-href-property.h  gdav-list-property.c  gdav-list-property.h  gdav-lock-entry.c  gdav-lock-entry.h  gdav-lockdiscovery-property.c  gdav-lockdiscovery-property.h  (+49 more)
po/: POTFILES.in
tools/: Makefile.am  commands.c  commands.h  enums.h  main.c  structs.h  utils.c  utils.h
